# weeklydevchat.github.io

./: .dockerignore  .gitattributes  .gitignore  404.html  AGENTS.md  CNAME  Dockerfile  LICENSE  README.md  create_post.ps1  create_post.sh  docker-compose.yml  docker-entrypoint.sh  future_topics  index.html  mkdocs.yml  pyproject.toml  requirements-dev.in  requirements-dev.txt  requirements.in  requirements.txt  sitemap.xml  tags.json
.github/workflows/: ci.yml  codeql.yml
.plans/: SPONSOR_PAGE_CHANGES.md
archive/2024/: index.html
archive/2025/: index.html
archive/2026/: index.html
assets/Design Files/: Weekly Dev Chat Site Design Ideas.xd
bold-predictions-2026/: index.html
category/best-practices/: index.html
category/business/: index.html
category/career/: index.html
category/community/: index.html
category/culture/: index.html
category/events/: index.html
category/industry/: index.html
category/security/: index.html
category/technical/: index.html
data/: sponsors.yml
docs/: .authors.yml  bold-predictions-2026.md  find_tags_categories.py  hosts.md  index.md  join.md  past_topics.md  sponsors.md  tags.md
docs/hosts/: index (wp export).md.bak  index.md
docs/past-hosts/: index.md
docs/sponsors/: index.md
docs/stylesheets/: extra.css  sponsors.css
hosts/: index.html
join/: index.html
page/10/: index.html
page/2/: index.html
past-hosts/: index.html
scripts/: find_tags_categories.py  optimize_all_images.sh  optimize_image.py
search/: search_index.json
sponsors/: index.html
stylesheets/: extra.css
tags/: index.html
(+323 files in other folders)
