[project]
name = "weeklydevchat-github-io"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "mkdocs-material>=9.7.0",
    "pillow>=12.2.0",
    "pygments~=2.20.0",
    "urllib3>=2.7.0",
]

# Optional but recommended
[tool.uv]
dev-dependencies = [
    # put dev-only tools here if needed
]