[project]
name = "weeklydevchat-github-io"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "mkdocs-macros-plugin>=1.5.0",
    "mkdocs-material>=9.7.0",
    "pygments~=2.20.0",
    "urllib3>=2.7.0",
]

# Dependencies are managed from this `pyproject.toml` with `uv`, not `requirements*.txt`.
# Install the project environment with `uv sync` and run tools/scripts with `uv run <command>`.
[dependency-groups]
dev = [
    "pillow>=12.2.0",
    "PyYAML>=6.0.1"

    # Add dev-only tools here when needed; they will be installed by `uv sync`.
]
